tdf#164932 sw inline heading: fix frame AutoSize at list offset

Calculation of AutoSize of text frames was incomplete,
resulting narrower frame width and e.g. two-line numbered inline
heading instead of a single one, if the left offset of the
numbering level in the attached list style was not zero.

This is a general fix for all text frames, not only for
text frames with Inline Heading frame style.

Regression from commit 56588663a0fddc005c12afaa7d3f8874d036875f
"tdf#131728 sw inline heading: fix DOCX paragraph layout
interoperability".

Follow-up to commit 7a35f3dc7419d833b8f47069c4df63e900ccb880
"tdf#48459 sw inline heading: apply it on the selected words",
commit d87cf67f8f3346a1e380383917a3a4552fd9248e
"tdf#131728 sw inline heading: fix missing/broken DOCX export",
commit a1dcbd1d1ce6071d48bb5df26d7839aeb21b75a8
"tdf48459 sw inline heading: add Inline Heading frame style"

Change-Id: I4aea651d6982db61af0e423f25152b1401dc16c1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/181025
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>